--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <nav>
         <ul>
             <li><a href="vector.html">Vector Calculator</a></li>
-            <li><a href=""></a></li>
+            <li><a href="heatmap.html"></a>Smoothing Heatmap</li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
