--- a/heatmap.html
+++ b/heatmap.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid Visualization</title>
+    <link rel="icon" href="logo.jpg">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -138,9 +139,28 @@
             grid-row: 2;
 
         }
+        .home-button {
+            position: absolute;
+            top: 0px; /* Adjust as needed */
+            left: 0px; /* Adjust as needed */
+            padding: 30px;
+            padding-bottom: 15px;
+            padding-top: 15px;
+            background-color: #4CAF50;
+            border-radius: 10px;
+            
+        }
+        .home-link {
+            color: white;
+            text-decoration: none;
+            
+        }
     </style>
 </head>
 <body>
+    <div class="home-button">
+        <a href="index.html" class="home-link">Home</a>
+      </div>
     <h1>Interactive Grid Visualization</h1>
     <div id = "biggrid">
         <div id="obj1">
