--- a/vector.html
+++ b/vector.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vector Field Path Tracing</title>
+  <link rel="icon" href="logo.jpg">
   <style>
     :root {
       --primary-bg: #894e59;
