--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Study Tools Compository</title>
+    <title>Assorted Projects</title>
     <link rel="icon" href="logo.jpg">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="logo-box"><a href="index.html"><img src="logo.jpg" alt="Epic Logo" class="logo"></a></div>
-        <h1>Study Tools Compository</h1>
+        <h1>Assorted Projects</h1>
     </header>
 
     <nav>
@@ -30,7 +30,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Study Tools Compository. All rights reserved.</p>
+        <p>&copy; 2024 Assorted Projects. All rights reserved.</p>
     </footer>
 </body>
 </html>
