--- a/lines.html
+++ b/lines.html
@@ -24,7 +24,7 @@
 <body>
     <header>
         <div class="logo-box"><a href="index.html"><img src="logo.jpg" alt="Epic Logo" class="logo"></a></div>
-        <h1>Study Tools Compository</h1>
+        <h1>Assorted Projects</h1>
     </header>
     <nav>
         
@@ -59,7 +59,7 @@
         <button id="resetSecretButton">New Random Secret Line</button>
     </div>
     <footer>
-        <p>&copy; 2024 Study Tools Compository. All rights reserved.</p>
+        <p>&copy; 2024 Assorted Projects. All rights reserved.</p>
     </footer>
     <script>
         const canvas = document.getElementById('plotCanvas');
