--- a/vector.html
+++ b/vector.html
@@ -63,7 +63,7 @@
 <body>
   <header>
     <div class="logo-box"><a href="index.html"><img src="logo.jpg" alt="Epic Logo" class="logo"></a></div>
-    <h1>Study Tools Compository</h1>
+    <h1>Assorted Projects</h1>
 </header>
 
 <nav>
@@ -103,7 +103,7 @@
     <canvas id="vector-canvas" width="800" height="600"></canvas>
   </main>
   <footer>
-    <p>&copy; 2024 Study Tools Compository. All rights reserved.</p>
+    <p>&copy; 2024 Assorted Projects. All rights reserved.</p>
   </footer>
 
 
