fixed home page

--- a/index.html
+++ b/index.html
@@ -14,19 +14,32 @@
     </header>
 
     <nav>
-        
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="vector.html">Vector Calculator</a></li>
             <li><a href="heatmap.html">Smoothing Heatmap</a></li>
             <li><a href="lines.html">Linear Regression</a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
         </ul>
     </nav>
 
     <div class="content">
-        
+        <div class="card-container">
+            <div class="card">
+                <h2>Scattered Games</h2>
+                <p>A list of silly games i've made.</p>
+                <a href="https://scatteredgames.com" class="btn" target="blank">Explore</a>
+            </div>
+            <div class="card">
+                <h2>Smoothing Heatmap</h2>
+                <p>Visualize and smooth heatmaps.</p>
+                <a href="heatmap.html" class="btn">Explore</a>
+            </div>
+            <div class="card">
+                <h2>My Portfolio</h2>
+                <p>See my professional website.</p>
+                <a href="https://hyrumhendrickson.com" class="btn" target="blank">Explore</a>
+            </div>
+        </div>
     </div>
 
     <footer>
