--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="card">
                 <h2>Smoothing Heatmap</h2>
                 <p>Visualize and smooth heatmaps.</p>
-                <a href="heatmap.html" class="btn">Explore</a>
+                <a href="heatmap.html" class="btn" target="blank">Explore</a>
             </div>
             <div class="card">
                 <h2>My Portfolio</h2>
