--- a/vector.html
+++ b/vector.html
@@ -72,6 +72,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="vector.html">Vector Calculator</a></li>
         <li><a href="lines.html">Linear Regression</a></li>
+        <li><a href="qr.html">QR code generator</a></li>
     </ul>
 </nav>
   <div id="title">
