--- a/vector.html
+++ b/vector.html
@@ -82,13 +82,13 @@
   <main>
     <div class="input-container">
       <label for="fx">Enter \( f(x, y) \):</label>
-      <input type="text" id="fx" placeholder="e.g., -y" />
+      <input type="text" id="fx" placeholder="e.g., -y" value="y-x"/>
       <label for="gy">Enter \( g(x, y) \):</label>
-      <input type="text" id="gy" placeholder="e.g., x" />
+      <input type="text" id="gy" placeholder="e.g., x" value="-y-x"/>
     </div>
     <div class="input-container">
       <label for="density">Density:</label>
-      <input type="range" id="density" min="5" max="75" value="10" />
+      <input type="range" id="density" min="5" max="75" value="30" />
       <span id="density-value">10</span>
       <label for="step-size">Step Size:</label>
       <input type="range" id="step-size" min="0.005" max="0.5" step="0.01" value="0.1" />
