--- a/qr.html
+++ b/qr.html
@@ -43,6 +43,7 @@
             <li><a href="vector.html">Vector Calculator</a></li>
             <li><a href="lines.html">Linear Regression</a></li>
             <li><a href="qr.html">QR code generator</a></li>
+            <li><a href="fractal.html">Fractal canvas</a></li>
         </ul>
     </nav>
     <div class = "box">
