--- a/fractal.html
+++ b/fractal.html
@@ -85,8 +85,8 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="vector.html">Vector Calculator</a></li>
             <li><a href="lines.html">Linear Regression</a></li>
-            <li><a href="qr.html">QR code generator</a></li>
-            <li><a href="fractal.html">Fractal canvas</a></li>
+            <li><a href="qr.html">QR Code Generator</a></li>
+            <li><a href="fractal.html">Fractal Canvas</a></li>
         </ul>
     </nav>
     <div id="body">
