added more cards

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="card-container">
             <div class="card">
                 <h2>Scattered Games</h2>
-                <p>A list of silly games i've made.</p>
+                <p>A website with silly games i've made.</p>
                 <a href="https://scatteredgames.com" class="btn" target="blank">Explore</a>
             </div>
             <div class="card">
@@ -40,6 +40,16 @@
                 <p>See my professional website.</p>
                 <a href="https://hyrumhendrickson.com" class="btn" target="blank">Explore</a>
             </div>
+
+            <div class="card">
+                <h2>Bible Buddy</h2>
+                <p>Check out my custom GPT.</p>
+                <a href="hhttps://chatgpt.com/g/g-67bb348c25e881919e52757d73932ed6-bible-buddy" class="btn" target="blank">Explore</a>
+            </div>
+
+
+
+            
         </div>
     </div>
 
