--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="card">
                 <h2>Bible Buddy</h2>
                 <p>Check out my custom GPT.</p>
-                <a href="hhttps://chatgpt.com/g/g-67bb348c25e881919e52757d73932ed6-bible-buddy" class="btn" target="blank">Explore</a>
+                <a href="https://chatgpt.com/g/g-67bb348c25e881919e52757d73932ed6-bible-buddy" class="btn" target="blank">Explore</a>
             </div>
 
 
