added major projects site

--- a/index.html
+++ b/index.html
@@ -27,23 +27,37 @@
         <div class="card-container">
             <div class="card">
                 <h2>Scattered Games</h2>
-                <p>A website with silly games i've made.</p>
+                <p>Website with silly games i've made.</p>
                 <a href="https://scatteredgames.com" class="btn" target="blank">Explore</a>
             </div>
+
             <div class="card">
-                <h2>Smoothing Heatmap</h2>
-                <p>Visualize and smooth heatmaps.</p>
-                <a href="heatmap.html" class="btn" target="blank">Explore</a>
+                <h2>Major Projects</h2>
+                <p>Website with interactive versions of my past professional projects.</p>
+                <a href="major/index.html" class="btn" target="blank">Explore</a>
             </div>
+            
             <div class="card">
                 <h2>My Portfolio</h2>
-                <p>See my professional website.</p>
+                <p>My professional resume website.</p>
                 <a href="https://hyrumhendrickson.com" class="btn" target="blank">Explore</a>
             </div>
 
             <div class="card">
+                <h2>Github</h2>
+                <p>Software to keep track of my current projects.</p>
+                <a href="https://github.com/HyrumHendrickson" class="btn" target="blank">Explore</a>
+            </div>
+
+            <div class="card">
+                <h2>2D Heatmap</h2>
+                <p>Webapp made to study random noise generation and modification.</p>
+                <a href="heatmap.html" class="btn" target="blank">Explore</a>
+            </div>
+
+            <div class="card">
                 <h2>Bible Buddy</h2>
-                <p>Check out my custom GPT.</p>
+                <p>Custom GPT to help with bible study and research.</p>
                 <a href="https://chatgpt.com/g/g-67bb348c25e881919e52757d73932ed6-bible-buddy" class="btn" target="blank">Explore</a>
             </div>
 
