--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="fractal.html">Fractal Canvas</a></li>
+            <li><a href="complex.html">Complex Graphing</a></li>
             <li><a href="vector.html">Vector Calculator</a></li>
             <li><a href="lines.html">Linear Regression</a></li>
             <li><a href="qr.html">QR Code Generator</a></li>
-            <li><a href="fractal.html">Fractal Canvas</a></li>
         </ul>
     </nav>
 
