--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                 <a href="https://scatteredgames.com" class="btn" target="blank">Explore</a>
             </div>
 
-            <div class="card">
+            <!-- <div class="card">
                 <h2>Major Projects</h2>
                 <p>Website with interactive versions of my past professional projects.</p>
                 <a href="major/index.html" class="btn" target="blank">Explore</a>
-            </div>
+            </div> -->
             
             <div class="card">
                 <h2>My Portfolio</h2>
@@ -55,12 +55,12 @@
                 <p>Webapp made to study random noise generation and modification.</p>
                 <a href="heatmap.html" class="btn" target="blank">Explore</a>
             </div>
-
-            <div class="card">
+            
+            <!-- <div class="card">
                 <h2>Bible Buddy</h2>
                 <p>Custom GPT to help with bible study and research.</p>
                 <a href="https://chatgpt.com/g/g-67bb348c25e881919e52757d73932ed6-bible-buddy" class="btn" target="blank">Explore</a>
-            </div>
+            </div> -->
 
 
 
