--- a/fractal.html
+++ b/fractal.html
@@ -22,7 +22,7 @@
         .instructions {
             width: 100%;
             text-align: center;
-            background-color: #333;
+            background-color: #f0efe6;
             padding: 10px;
             border-radius: 5px;
             margin-top: 10px;
