--- a/qr.html
+++ b/qr.html
@@ -6,6 +6,7 @@
     <title>QR Code Generator</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="logo.jpg">
     <style>
         
         #qrcode {
