--- a/complex.html
+++ b/complex.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Complex Number Visualizer</title>
+    <link rel="icon" href="logo.jpg">
     <style>
         body {
             font-family: Arial, sans-serif;
