--- a/lines.html
+++ b/lines.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linear Regression Game</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="logo.jpg">
     <style>
         body {
             font-family: Arial, sans-serif;
