--- a/weather.html
+++ b/weather.html
@@ -6,6 +6,7 @@
     <title>Rexburg Weather Data Dashboard (2000-2020)</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
+    <link rel="icon" href="logo.jpg">
     <style>
         :root {
             --primary-color: #3498db;
