added new website link

--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
                 <p>Webapp made to study random noise generation and modification.</p>
                 <a href="heatmap.html" class="btn" target="blank">Explore</a>
             </div>
+
+            <div class="card">
+                <h2>Western Humanities</h2>
+                <p>Example website to showcase my web development skills.</p>
+                <a href="westernhumanities.org" class="btn" target="blank">Explore</a>
+            </div>
             
             <!-- <div class="card">
                 <h2>Bible Buddy</h2>
