fixed broken link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="card">
                 <h2>Western Humanities</h2>
                 <p>Example website to showcase my web development skills.</p>
-                <a href="westernhumanities.org" class="btn" target="blank">Explore</a>
+                <a href="https://westernhumanities.org" class="btn" target="blank">Explore</a>
             </div>
             
             <!-- <div class="card">
