--- a/api.html
+++ b/api.html
@@ -290,6 +290,7 @@
             <li><a href="fractal.html">Fractal Canvas</a></li>
             <li><a href="complex.html">Complex Graphing</a></li>
             <li><a href="vector.html">Vector Calculator</a></li>
+            <li><a href="api.html">API Tester</a></li>
             <li><a href="qr.html">QR Code Generator</a></li>
         </ul>
     </nav>
