--- a/api.html
+++ b/api.html
@@ -586,9 +586,9 @@
         // Initialize on page load
         logToConsole('   API Downloader loaded successfully!', 'success');
         logToConsole('   Try these CORS-friendly test URLs:', 'info');
-        logToConsole('   • https://httpbin.org/json (always works)', 'info');
-        logToConsole('   • https://api.github.com/users/octocat (GitHub API)', 'info');
-        logToConsole('   • Or use a CORS proxy with any API!', 'info');
+        logToConsole('   https://httpbin.org/json (always works)', 'info');
+        logToConsole('   https://api.github.com/users/octocat (GitHub API)', 'info');
+        logToConsole('   Or use a CORS proxy with any API!', 'info');
     </script>
 </body>
 </html>
