--- a/sql.html
+++ b/sql.html
@@ -56,7 +56,7 @@
 <body>
   <header>
     <div class="logo-box"><a href="index.html"><img src="logo.jpg" alt="Epic Logo" class="logo"></a></div>
-    <h1>SQLite Query Tester</h1>
+    <h1>Assorted Projects</h1>
   </header>
 
   <nav>
