Update api examples

--- a/api.html
+++ b/api.html
@@ -579,9 +579,10 @@
         // Initialize on page load
         logToConsole('   API Downloader loaded successfully!', 'success');
         logToConsole('   Try these CORS-friendly test URLs:', 'info');
-        logToConsole('   https://httpbin.org/json (always works)', 'info');
-        logToConsole('   https://api.github.com/users/octocat (GitHub API)', 'info');
-        logToConsole('   Or use a CORS proxy with any API!', 'info');
+        logToConsole('   https://cdn.jsdelivr.net/gh/wldeh/bible-api/bibles/en-kjv/books/1john/chapters/1.json', 'info');
+        logToConsole('   https://openscriptureapi.org/api/v1/scriptures/1nephi/1/1', 'info');
+        logToConsole('   https://api.github.com/users/HyrumHendrickson', 'info');
+        logToConsole('   If your API request is not working, try a CORS proxy, they sometimes help.', 'info');
     </script>
 </body>
 </html>
