--- a/sql.html
+++ b/sql.html
@@ -91,10 +91,10 @@
     initSqlJs({ locateFile: file => `https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.6.2/${file}` }).then(SQL => {
       db = new SQL.Database();
       db.run(
-        "CREATE TABLE students (id INTEGER, name TEXT, grade INTEGER);" +
-        "INSERT INTO students VALUES (1, 'Alice', 90);" +
-        "INSERT INTO students VALUES (2, 'Bob', 85);" +
-        "INSERT INTO students VALUES (3, 'Charlie', 88);"
+        "CREATE TABLE students (id INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT, grade INTEGER);" +
+        "INSERT INTO students VALUES ('Alice', 90);" +
+        "INSERT INTO students VALUES ('Bob', 85);" +
+        "INSERT INTO students VALUES ('Charlie', 88);"
       );
     });
 
