--- a/sql.html
+++ b/sql.html
@@ -74,7 +74,8 @@
   <div class="content">
     <div class="card sql-card">
       <h2>Try Running a SQL Query</h2>
-      <textarea id="query" placeholder="SELECT * FROM students;"></textarea>
+      <textarea id="query" placeholder="SELECT name FROM sqlite_master WHERE type = 'table';&#10;SELECT * FROM students;"> </textarea>
+
       <br>
       <button class="btn" onclick="runQuery()">Run Query</button>
       <pre id="output">Waiting for input...</pre>
