--- a/sql.html
+++ b/sql.html
@@ -74,8 +74,7 @@
   <div class="content">
     <div class="card sql-card">
       <h2>Try Running a SQL Query</h2>
-      <textarea id="query" placeholder="SELECT name FROM sqlite_master WHERE type = 'table';&#10;SELECT * FROM students;&#10;INSERT INTO teachers (first_name, last_name, subject) VALUES 
-  ('Jordan', 'Peterson', 'Physcology')"></textarea>
+      <textarea id="query" placeholder="SELECT name FROM sqlite_master WHERE type = 'table';&#10;SELECT * FROM students;&#10;INSERT INTO teachers (first_name, last_name, subject) VALUES ('Jordan', 'Peterson', 'Physcology');"></textarea>
 
 
       <br>
