--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="card">
                 <h2>Scattered Games</h2>
                 <p>Website with silly games i've made.</p>
-                <a href="scatteredgames/index.html" class="btn" target="blank">Explore</a>
+                <a href="games/index.html" class="btn" target="blank">Explore</a>
             </div>
 
             <!-- <div class="card">
