--- a/hack.html
+++ b/hack.html
@@ -46,12 +46,12 @@
         Open via HTTP
       </a>
 
-      <!-- HTTPS link (add :PORT if needed) -->
+      <!-- HTTPS link (add :PORT if needed) 
       <a class="btn" id="httpsLink" href="https://50.112.243.171/" target="_blank" rel="noopener noreferrer">
         Open via HTTPS
       </a>
     </div>
-
+    -->
     <p class="muted">
       Note: If the server uses HTTPS with a certificate for a domain (not the IP), browsers may warn when visiting by IP.
     </p>
